	well as on restart).

2010-02-06  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed a substitute bug with a?_{i j} type patterns (would mess
	up the indices).

2010-02-05  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.19

	* Fixed a bunch of undo/redo bugs and associated gtk subtleties
	which may have been the cause of the OS X segfaults.

2010-02-04  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed display of \anticommutator.

2010-02-01  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed cadabra-41: @collect_factors does not take commutativity
	properties into account.

2010-01-28  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed cadabra-7.

2009-12-06  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed @expand_power action on fractional powers.

2009-12-02  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed display of commutators (duplicate second part).

2009-08-26  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed compilation problem on OS X.

2009-08-23  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.16

	* Fixed a problem with prod-sorting of two neighbouring objects
	with non-contracted implicit indices.

	* Fixed split-view operation of the GUI.

2009-08-21  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed handling of Accents in the new output routines.

2009-08-18  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.15

2009-07-24  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Started refactoring the output in Mathematica and Maple formats.

2009-07-23  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed handling of and recovering from LaTeX errors.

	* Catch more LaTeX errors with user-understandable error dialog
	(in particular double super/sub script).

	* Fixed a cell-focus bug.

2009-07-18  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.14

	* Fixed buffer underrun problem in the kernel, which would cut
	input and insert bogus newline characters.
